--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
     tools:context="com.sjn.demo.localfilecast.MainActivity">
 
     <TextView
+        android:id="@+id/ip_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:autoLink="web" />
 </RelativeLayout>
